streamlit/manual-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-course-streamlit-manual
  labels:
    app: streamlit-devops-course
spec:
  selector:
    matchLabels:
      app: streamlit-devops-course
  template:
    metadata:
      labels:
        app: streamlit-devops-course
    spec:
      containers:
      - name: streamlit
        image: # TODO: image
        command:
          - "/bin/sh"
          - "-c"
        args:
          - python -m streamlit run streamlit/main/app.py --server.address 0.0.0.0 --server.port 8080
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
        ports:
          - containerPort: 9000
